--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server",
-    "server": "node server"
+    "server": "node server",
+    "client": "npm start --prefix ../client",
+    "dev":"concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
